@@ -1370,6 +1370,7 @@ The first line must be a trigger word followed by any parameters.  Valid \
 triggers and parameters are as follows:\n\r\
 LOAD=[SCRIPT PATH] - insert a new script from another file.  Ex: LOAD=progs/my.script~ \n\r\
 GREET_PROG [PCT CHANCE] - When players enter the room, given the chance.\n\r\
+ARRIVE_PROG [PCT CHANCE] - When the mob enters a new room, or enters the game.\n\r\
 ALL_GREET_PROG [PCT CHANCE] - Same as GREET_PROG, but works with sneakers too.\n\r\
 LOGIN_PROG [PCT CHANCE] - When players logs into the game, given the chance.\n\r\
 LOGOFF_PROG [PCT CHANCE] - When players log out of the game, given the chance.\n\r\
